Fixing summary text and paragraph spacing.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -43,6 +43,9 @@ aside#sidebar { font-size: 15px; font-family: 'Courier New', Courier, monospace;
   padding-right: 50px;
   padding-left: 20px;
 }
+.paragraph-break {
+  padding-bottom: 10px;
+}
 .font-bold {
   font-weight: 700;
 }
